# InfoConfig

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.pod
cmake/: InfoCUtils.cmake
example/: CMakeLists.txt  example.xfg  main.cpp
icl/: CMakeLists.txt  eg.icf  eg.ich  icl.bnf
icl/include/info/config/icl/: identifier.hpp  macros.hpp  pp.hpp
icsc/: CMakeLists.txt
icsc/include/icsc/: som.hpp
icsc/src/: main.cpp
include/info/config/: Accessor.hpp  Config.hpp  LocalXMLString.hpp  _api.hpp  exception.hpp
include/info/config/exception/: InfoConfigException.hpp  InitializationException.hpp  ParsingException.hpp
libs/: CMakeLists.txt
src/: Accessor.cpp  Config.cpp  LocalXMLString.cpp
src/exception/: InfoConfigException.cpp  InitializationException.cpp  ParsingException.cpp
